Adding back css

--- a/README.adoc
+++ b/README.adoc
@@ -22,6 +22,8 @@ image:https://travis-ci.com/lightbend/antora-ui-lightbend-theme.svg?branch=maste
 
 This repo contains a zipped Antora UI component that is styled to use with Antora to build documentation for Lightbend's commercial products. You can see a preview of the default UI at {url-preview}.The most common use is to simply refer to this zipped bundle. However, you can also make changes to the UI by modifiying the source files in this repo.  demonstrates how to produce a UI bundle for use in a documentation site generated with {url-antora}[Antora].
 
+To understand the structure and behavior of the UI, see ./docs/modules/ROOT/pages/index.adoc.
+
 This readme describes how to:
 
 * xref: use[Use the Lightbend UI in a doc project]
