--- a/preview-src/index.adoc
+++ b/preview-src/index.adoc
@@ -14,6 +14,8 @@ Author Name
 :page-supergroup-minishift-minikube: Platform
 :page-supergroup-kubernetes-openshift: Platform
 :page-supergroup-mac-ubuntu: OS
+:page-supergroup-browser-cli: Interface
+
 
 
 == Configure the service locator
@@ -301,6 +303,15 @@ This is the java of the second tab.
 }
 ----
 --
+
+
+
+[.tabset] 
+Browser::
+This is the Browser stuff for the first tab.
+CLI::
+This is the CLI stuff for the second tab.
+
 
 == Table Examples
 
