--- a/preview-src/index.adoc
+++ b/preview-src/index.adoc
@@ -22,6 +22,8 @@ Author Name
 
 Lagom uses a service locator to look up other microservices. The service locator takes the service name defined in a Lagom service descriptor and translates it into an address to use for communication. In development, when you are running with the `runAll` command, Lagom starts up its own development service locator, and injects that into each microservice. You don't have to worry about service lookup until production. Once out of the development environment, you need to provide a service locator yourself.
 
+link:https://www.youtube.com/watch?v=xiFX0y20IFA[Watch on YouTube ,role=yt-widget]
+
 Akka provides an API called https://doc.akka.io/docs/akka/current/discovery/index.html[Akka Discovery] that includes a number of backends. Several are compatible with a Kubernetes environment. We're going to use a service locator implementation built on Akka Discovery, and then we're going to use the DNS implementation of Akka discovery to discover other services.
 
 == Formatted Text
